Fix for bug 136008. Do not cache the compose window if it's the last window else that will prevent the application to shutdown. Patch submitted by antonio.xu@sun.com. R=ducarroz, SR=bienvenu